--- a/src/postling/postling.scss
+++ b/src/postling/postling.scss
@@ -90,6 +90,10 @@ TextArea.empty {
 Input {
     padding: 0 1;
     height: 1;
+
+    &:focus {
+        background: $surface-lighten-1;
+    }
 }
 
 Button {
