Datatable stable scrollbar gutter

--- a/src/postling/postling.scss
+++ b/src/postling/postling.scss
@@ -50,6 +50,7 @@ TabPane {
 }
 
 DataTable {
+    scrollbar-gutter: stable;
     & .datatable--header {
         background: $boost;
         color: $text;
