--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -262,3 +262,11 @@ Checkbox {
     color: $text;
   }
 }
+
+.textual-jump-label {
+  layer: textual-jump;
+  dock: top;
+  text-style: b;
+  background: $secondary-lighten-2;
+  color: $text;
+}
