Some theme improvements

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -1,3 +1,11 @@
+Screen {
+  background: $background;
+}
+
+ModalScreen {
+  background: black 30%;
+}
+
 .section {
   border: round $accent 35%;
   border-title-color: $text;
