--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -34,14 +34,7 @@ AppBody {
   &.layout-horizontal {
     layout: horizontal;
 
-    & #header-inputs {
-      layout: vertical;
-      & Button {
-        width: 1fr;
-      }
-    }
-
-    & #param-inputs {
+    & KeyValueInput {
       layout: vertical;
       & Button {
         width: 1fr;
@@ -52,11 +45,7 @@ AppBody {
   &.layout-vertical {
     layout: vertical;
 
-    & #header-inputs {
-      layout: horizontal;
-    }
-
-    & #param-inputs {
+    & KeyValueInput {
       layout: horizontal;
     }
   }
