--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -292,8 +292,7 @@ Checkbox {
 .textual-jump-label {
   layer: textual-jump;
   dock: top;
-  text-style: b;
-  background: $secondary-lighten-2;
+  background: $accent;
   color: $text;
 }
 
@@ -302,9 +301,9 @@ Checkbox {
   dock: bottom;
   height: 1;
   width: 1fr;
-  background: $secondary-lighten-2;
+  background: $accent;
   color: $text;
-  hatch: right $secondary;
+  hatch: right $accent-darken-2;
   
   & Label {
     width: auto;
