Improve non-focused tree cursor style

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -183,6 +183,9 @@ TextArea {
 
 Tree {
   & > .tree--cursor {
+    background: $panel-lighten-1 70%;
+  }
+  &:focus > .tree--cursor {
     background: $accent;
   }
 
