Toast fixes, theme culls

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -321,3 +321,9 @@ CollectionBrowser {
     border-title-align: left;
   }
 }
+
+Toast {
+  color: $text; 
+  background: $secondary-background-darken-2;
+  border-right: none;
+}
