Fix cursor colour

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -226,7 +226,7 @@ Input {
 
     & .input--cursor {
       color: $text;
-      background: $accent-lighten-2;
+      background: $accent;
       text-style: not reverse;
     }
 
