Updating collection browser when saving to disk

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -190,9 +190,11 @@ TextArea {
     padding: 0;
     background: $surface;
     margin-bottom: 1;
+    padding-left: 1;
     &:focus {
       background: $surface-lighten-1;
       border-left: outer $surface-lighten-2;
+      padding: 0;
   }
   }
 
