Showing descriptions for options, and ability to create a new request from anywhere

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -1,5 +1,5 @@
 * {
-  scrollbar-color: $surface-lighten-1;
+  scrollbar-color: $accent 30%;
   scrollbar-color-hover: $accent 50%;
   scrollbar-color-active: $accent;
   scrollbar-background: $surface-darken-1;
