Style fix, delete some example requests

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -10,7 +10,7 @@
 
 AutoComplete {
   border-left: wide $accent;
-  background: transparent;
+  background: $surface;
   
   & AutoCompleteList {
     color: $text-muted;
