--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -41,10 +41,10 @@ ModalScreen {
     border-title-color: $text;
     border-title-style: b;
   }
+}
 
-  &.hidden {
-    display: none;
-  }
+.hidden {
+  display: none;
 }
 
 .w-auto {
