Adding yet more help text

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -1,11 +1,15 @@
 * {
   scrollbar-color: $accent 30%;
-  scrollbar-color-hover: $accent 50%;
+  scrollbar-color-hover: $accent 80%;
   scrollbar-color-active: $accent;
   scrollbar-background: $surface-darken-1;
   scrollbar-background-hover: $surface-darken-1;
   scrollbar-background-active: $surface-darken-1;
   scrollbar-size-vertical: 1;
+
+  &:focus {
+    scrollbar-color: $accent 55%;
+  }
 }
 
 AutoComplete {
