Pausing before focus

--- a/tests/resources/snapshot_report_template.jinja2
+++ b/tests/resources/snapshot_report_template.jinja2
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Textual Snapshot Test Report</title>
+    <title>Posting Snapshot Test Report</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <style>
@@ -24,7 +24,7 @@
     <div class="row mb-4" style="background-color:#F4F8F7;">
         <div class="col-8 p-4">
             <h4>
-                <strong>Textual</strong> Snapshot Tests
+                <strong>Posting</strong> Snapshot Tests
             </h4>
             <span class="text-muted">Showing diffs for {{ fails }} mismatched snapshot(s)</span>
         </div>
