Testing new themes system, ensuring tree cursor is always readable (auto)

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -242,6 +242,8 @@ TextArea {
 
 Tree {
   & > .tree--cursor {
+    text-style: not dim;
+    color: $text;
     background: $panel-lighten-1 70%;
   }
   &:focus > .tree--cursor {
