--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -27,6 +27,9 @@ background-image: linear-gradient(
     hsl(278deg 100% 45%) 100%,
     hsl(270deg 100% 50%) 100%
 );
+background-repeat: no-repeat;
+background-size: cover;
+background-attachment: fixed;
 }
 
 .md-header{position:initial;background-color: rgba(0,0,0,0);}
@@ -39,9 +42,8 @@ background-image: linear-gradient(
 
 a.posting-button {
     color: whitesmoke;
-    padding: 0.6rem 1.2rem;
+    padding: 0.7rem 1.4rem;
     background-color: hsl(287deg 100% 10%);
-    margin-right: 1rem;
     border: 4px solid hsl(287deg 100% 30%);
     border-radius: 2px;
     font-family: "Roboto Mono", monospace;
