--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -303,11 +303,18 @@ Input {
   height: 1;
   background: $surface;
   border: none;
+  &.-invalid {
+    padding-left: 0;
+    border-left: outer $error;
+  }
 
   &:focus {
     background: $surface-lighten-1;
     padding-left: 0;
     border-left: outer $surface-lighten-2;
+    &.-invalid {
+      border-left: outer $error;
+    }
 
     & .input--cursor {
       color: $text;
