--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -41,6 +41,10 @@ table {
     color: hsl(287, 72%, 66%) !important;
 }
 
+nav.md-nav.md-nav--secondary {
+    border-left-color: hsl(287, 72%, 66%) !important;
+}
+
 nav.md-tabs {
     background: transparent !important;
     box-shadow: none !important;
@@ -106,6 +110,18 @@ nav.md-tabs {
     background-color: transparent !important;
 }
 
+article p {
+    color: #f0f0f0f0;
+}
+
+p a {
+    color: hsl(287, 72%, 66%) !important;
+}
+
+a:hover {
+    color: hsl(287, 72%, 66%) !important;
+}
+
 a.posting-button {
     color: whitesmoke;
     padding: 0.7rem 1.4rem;
@@ -123,6 +139,37 @@ a.posting-button {
 
 .monospace {
     font-family: "Roboto Mono", monospace;
+}
+
+.md-search__output mark {
+    color: hsl(287, 72%, 66%);
+}
+
+.md-search-result__more div {
+    color: hsl(287, 72%, 66%) !important;
+    opacity: 0.8;
+}
+
+article {
+    max-width: 840px;
+    margin: 0 auto !important;
+    padding: 0 1rem;
+
+    & p mark {
+        background-color: rgba(255, 100, 203, 0.25) !important;
+    }
+}
+
+footer {
+    & div.md-ellipsis {
+        font-family: "Roboto Mono", monospace;
+    }
+}
+
+@media (min-width: 1220px) {
+    article {
+        margin: 0 0 !important;
+    }
 }
 
 :root {
